src/css/custom.css
/* Fonts */
/* new */
/* @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap'); */
@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap');
/* @import url('https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Pixelify+Sans:wght@400;600&display=swap'); */


.reactive-height {
  min-height: calc(100vh * 1)!important;
}


.app-layout {
  display: flex;
  flex-flow: column nowrap;
  align-items: stretch;
}

/* Basic responsive row layout */
.row {
  display: flex; /* Make the container a flex container */
  flex-wrap: wrap; /* Allow the columns to wrap onto new lines if needed */
  gap: 2vw; /* Space between the columns */
  justify-content: space-around;
}

.column {
  flex: 1 1 32%; /* Allow each column to take up 30% of the width */
  max-width: 32%; /* Prevent columns from getting too wide */
  box-sizing: border-box; /* Include padding and borders in width calculation */
  margin-bottom: 3px; /* Add some space below the columns */
}

.p-3 {
  padding-left: 0.3rem;
}

/* VideoCard.css */
.video-card-wrapper { /* for vertical layouts at bottom */
  flex-wrap: wrap;
  justify-content: space-between;
  gap: 1px;
}

.video-card {
  display: flex;
  max-width: 100%;
  min-width: 0;              /* allows card to shrink below content size in grid/flex */
  margin-bottom: 1.2rem;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  box-sizing: border-box;
}

.inner-content-div {
  padding: 0.8rem;
  margin: 1px;
  max-width: 100%;           /* never wider than the card */
  box-sizing: border-box;    /* padding included in that width */
  background-color: inherit;
  border-radius: 20px;
  outline-style: groove;
  outline-width: thick;
}

a {
  text-decoration: none;
}
a:hover {
  text-decoration: none;
}

.bigger-font {
  font-size: 1.8rem;
}

.black-text {
  color: black;
}
.spacing-class {
  margin: 0px!important;
  padding: 0.7rem!important;
  outline-style: solid;
  outline-color: black;
}


/* qi page styling  */
.lemonchiffon{
  background: linear-gradient(LemonChiffon, aliceblue) !important;
  outline-color: LemonChiffon;
  color: black;
}
/* .lemonchiffon div:hover {
  color: blue;
} */
.mediumaquamarine{
  background: linear-gradient(MediumAquamarine, aliceblue) !important;
  outline-color: MediumAquamarine;
  color: black;
}
/* .mediumaquamarine div:hover {
  color: orangered;
} */
.cornflowerblue{
  background: linear-gradient(cornflowerblue, aliceblue) !important;
  outline-color: cornflowerblue;
  color: black;
}
/* .cornflowerblue div:hover {
  color: orangered;
} */
.darkgrey{
  background: linear-gradient(#A9a9a9, aliceblue) !important;
  outline-color: darkgrey;
  color: black;
}
/* .darkgrey div:hover {
  color: orangered;
} */
.orchid{
  background: linear-gradient(orangered, aliceblue) !important;
  outline-color: orangered;
  color: black;
}
/* .orchid div:hover {
  color: blue;
} */

/* boilerplate Infinima defaults */
:root {
  --ifm-color-primary: #0000FF;
  --chop-primary: #54473A;
  --chop-light: #ffffff;
  --ifm-color-primary-dark: #ED6B4E;
  --ifm-color-primary-darker: #E64124;
  --ifm-color-primary-darkest: #E03C27;
  --ifm-color-primary-light: #1F9573;
  --ifm-color-primary-lighter: #23bb90;
  --ifm-color-primary-lightest: #18e7ad;
  --ifm-code-font-size: 95%;
}

*, .footer__title {
  /* font-family: "Geist Mono", monospace; */
  font-family:  "Rubik";
  font-optical-sizing: auto;
  font-weight: 300;
  font-style: normal;
}

h1, h2, h3, button {
  font-family:  "Rubik";
  font-weight: 500;
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme='dark'] {
  --ifm-color-primary: LemonChiffon;
  --chop-primary: #201c17;
  --chop-light: LemonChiffon;
  --ifm-color-primary-dark: #3D7A67;
  --ifm-color-primary-darker: #5E7C6E;
  --ifm-color-primary-darkest: #556E5A;
  --ifm-color-primary-light: #1F9573;
  --ifm-color-primary-lighter: #23bb90;
  --ifm-color-primary-lightest: #18e7ad;


  color: #333;
}

.docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.1);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

[data-theme='dark'] .docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.3);
}

.no-bullet {
  list-style-type: none;
}


/* forces styling over the HomepageFeatures objects*/
.feature-card-style {
  background: linear-gradient(0deg, rgba(10,0,0,0.7), var(--ifm-color-primary-darkest));
  border-radius: 15px;
  border: #333 5px groove;

  margin-bottom: 2.5rem;
}

/* tax width control */
.max-width-control {
  max-width: 80vw;
}

/* button upgrade */
.glossy-btn {
  color: var(--chop-light);
  padding: 2rem;
  border-radius: 90px;
  border: var(--ifm-color-primary-lightest) 2px groove;
  background: linear-gradient(-14deg, rgba(10,0,0,0.8), var(--ifm-color-primary-light));
}


/* makes the default footer colors into a slight gradient */ 
.footer {
  background: linear-gradient(-14deg, rgba(10,0,0,0.8), var(--ifm-color-primary-light));
  border: var(--ifm-color-primary-dark) 5px groove;
}
/* text shadows for the top of the landing page */
.hero__subtitle {
  color: #FFFFFF;
  text-shadow: #FFF 0px 0px 5px, #FFF 0px 0px 10px, #FFF 0px 0px 15px, #ff5e2d 0px 0px 20px, #ff5e2d 0px 0px 30px, #ff5e2d 0px 0px 40px, #ff5e2d 0px 0px 50px, #ff5e2d 0px 0px 75px;
}
.hero__title {
  text-shadow: #FFF 0px 0px 5px, #FFF 0px 0px 10px, #FFF 0px 0px 15px, #FFF 0px 0px 20px, #FFF 0px 0px 30px, #FFF 0px 0px 40px, #FFF 0px 0px 50px, #FFF 0px 0px 75px;
}



/* adapted from https://stackoverflow.com/questions/23441060/how-to-animate-gradients-using-css */
main {
    background: linear-gradient(180deg, 
    #5E7C6E
    #1F9573, 
    #3D7A67, 
    #556E5A);
    background-size: 200% 200%;

    -webkit-animation: Animation 37s ease infinite;
    -moz-animation: Animation 37s ease infinite;
    animation: Animation 37s ease infinite;
}



@-webkit-keyframes Animation {
    0%{background-position:10% 0%}
    50%{background-position:91% 100%}
    100%{background-position:10% 0%}
}
@-moz-keyframes Animation {
    0%{background-position:10% 0%}
    50%{background-position:91% 100%}
    100%{background-position:10% 0%}
}
@keyframes Animation { 
    0%{background-position:10% 0%}
    50%{background-position:91% 100%}
    100%{background-position:10% 0%}
}

/* custom bespoke styling */
em {
  font-weight: bold;
}

.chat-text { /* only used for vibing-w-LLMs content*/
  text-wrap: wrap;
  background-color: rgba(0, 0, 0, 0.8);
  border-radius: 1rem;
  padding: 1rem;
  color: whitesmoke;
  margin-bottom: 1rem;
}


.cogito-text {
  color: red;
  font-weight: 600;
  font-kerning: 1;
}


div.warning { /* only used for vibing-w-LLMs content*/
  content:url("warning.png");
  aspect-ratio: 6.17;
  max-width: 85vw;
}

.chat-post { /* only used for vibing-w-LLMs content*/
  background: rgba(0,0,0,0.8);
  color: yellowgreen;
  border-radius: 1rem;
  padding: 1rem;
}

.content-center {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
}


/* Make adjustments with viewport width (vw) for scaling */
@media screen and (max-width: 1024px) {
  .video-card > .inner-content-div > .responsive-text {
    font-size: 1.5rem; /* Slightly larger text for tablets */
  }
}

/* Make sure the text inside video card is not too big on smaller screens */
@media screen and (max-width: 768px) {
  .video-card > .inner-content-div > .responsive-text {
    font-size: 1.1rem;  /* Adjust font size based on screen size */
  }
}

/* Use a smaller text size for very small screens */
@media screen and (max-width: 375px) {
  .video-card > .inner-content-div > .responsive-text {
    font-size: 1rem;  /* Scale down text size on small screens */
  }
}

